# graphic-library

./: Cargo.toml  shell.nix
examples/: input.rs  scroll.rs  text.rs
src/: input.rs  lib.rs  main.rs  platform.rs  renderer.rs  scene.rs  window.rs
src/app/: mod.rs  runtime.rs
src/gfx/: mod.rs
src/gfx/renderer/: core.rs  mod.rs  pipeline.rs  shader.wgsl  vertex.rs
src/gfx/renderer/core/: access.rs  init.rs  instances.rs  mod.rs  render.rs  state.rs  surface.rs
src/platform/: adapter.rs  input.rs  mod.rs  window.rs
src/ui/: mod.rs  scene.rs
src/ui/scene/: mod.rs  rect.rs  scene_impl.rs  text.rs
