[package]
name = "rendui"
version = "0.1.0"
edition = "2021"
description = "Minimal GPU-rendered UI framework"
authors = ["You"]

[dependencies]
wgpu = "0.19"
winit = { version = "0.29", default-features = false, features = ["x11", "wayland", "wayland-dlopen", "rwh_06"] }
pollster = "0.3"
bytemuck = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
